kubernetes/apps/devtools/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application-ingress
  namespace: devtools
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - networking
          - monitoring
          - media
          - default
  - from:
    - ipBlock:
        cidr: 192.168.0.0/24
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - forgejo-ci
    ports:
    - protocol: TCP
      port: 3000
    - protocol: TCP
      port: 22
